<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        style="@style/status_bar"
        android:background="@color/gray"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_medium_56"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/status_bar_text.value"
                android:text="@string/rate_value"/>

            <TextView
                style="@style/status_bar_text"
                android:text="@string/rate_text"/>
        </LinearLayout>

        <View style="@style/view_line.vertical"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_medium_56"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/status_bar_text.value"
                android:text="@string/code_count"/>

            <TextView
                style="@style/status_bar_text"
                android:text="@string/code_text"/>
        </LinearLayout>

        <View style="@style/view_line.vertical"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_medium_56"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/status_bar_text.value"
                android:text="@string/project_value"/>

            <TextView
                style="@style/status_bar_text"
                android:text="@string/project_text"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:orientation="horizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_phone_black_24dp"
            />

        <LinearLayout
           style="@style/info_layout_inside">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone_et"
                    style="@style/text_style"
                    android:hint="@string/phone_text"
                    android:inputType="phone"
                    android:text="@string/phone_number"
                    >
                </EditText>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"
            />
    </LinearLayout>

    <View
        style="@style/view_line.horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:orientation="horizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_email_black_24dp"
            />

        <LinearLayout
            style="@style/info_layout_inside">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mail_et"
                    style="@style/text_style"
                    android:hint="@string/mail_text"
                    android:inputType="textEmailAddress"
                    android:text="@string/mail_value"
                    >

                </EditText>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"
            />
    </LinearLayout>

    <View
        style="@style/view_line.horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:orientation="horizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/vk_circle"
            />

        <LinearLayout
            style="@style/info_layout_inside">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/vk_et"
                    style="@style/text_style"
                    android:hint="@string/vk_text"
                    android:inputType="text"
                    android:text="@string/vk_value"
                    >
                </EditText>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_remove_red_eye_black_24dp"
            />
    </LinearLayout>

    <View
        style="@style/view_line.horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:orientation="horizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/github_circle"
            />

        <LinearLayout
            style="@style/info_layout_inside">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/repository_et"
                    style="@style/text_style"
                    android:hint="@string/repository_text"
                    android:inputType="text"
                    android:text="@string/repository_value"
                    >
                </EditText>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_remove_red_eye_black_24dp"
            />
    </LinearLayout>

    <View
        style="@style/view_line.horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small_8"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:orientation="horizontal">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_black_24dp"
            />

        <LinearLayout
            style="@style/info_layout_inside">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/about_et"
                    style="@style/text_style"
                    android:hint="@string/about_text"
                    android:inputType="text"
                    android:text="@string/about_value"
                    >
                </EditText>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>


